# op-controls

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  autobuild.sh
.devcontainer/: Dockerfile  devcontainer.json
docs/: uart_comms.md
src/: FreeRTOSConfig.h  as5600.c  as5600.h  command.c  command.h  gimbal.c  gimbal_configuration.c  gimbal_configuration.h  hardware_configuration.c  hardware_configuration.h  main.c  pid.c  pid.h  pinout.c  pinout.h  rotary_utils.c  rotary_utils.h  software_configuration.h  task_context.h  task_manager.c  task_manager.h  uart_comm.c  uart_comm.h
src/comms/: command.c  command.h  packet.h
src/controls/: pid.c  pid.h
src/gimbal/: gimbal.c  gimbal.h  gimbal_configuration.c  gimbal_configuration.h  gimbal_engine.c  gimbal_engine.h  gimbal_state.c  gimbal_state.h
src/sensors/: as5600.c  as5600.h
src/tasks/: comm_process_task.c  comm_process_task.h  comm_rx_task.c  comm_rx_task.h  comm_tx_task.c  comm_tx_task.h  control_task.c  control_task.h  stream_task.c  stream_task.h  sync_task.c  sync_task.h
src/utils/: rotary_utils.h  time_utils.h
